@@ -1,0 +1,3 @@
+<form>
+  <input type="input" tal:attributes="checked False" />
+</form>
